; ModuleID = '/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_send_text.c_yrmcds_text_quit.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/libyrmcds/extr_send_text.c_yrmcds_text_quit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"quit\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @yrmcds_text_quit(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca [1 x i32], align 4
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = getelementptr inbounds [1 x i32], [1 x i32]* %5, i64 0, i64 0
  %7 = call i32 @textbuf_init(i32* %6)
  %8 = getelementptr inbounds [1 x i32], [1 x i32]* %5, i64 0, i64 0
  %9 = call i32 @textbuf_append_const_string(i32* %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds [1 x i32], [1 x i32]* %5, i64 0, i64 0
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @send_command(i32* %10, i32* %11, i32* %12)
  ret i32 %13
}

declare dso_local i32 @textbuf_init(i32*) #1

declare dso_local i32 @textbuf_append_const_string(i32*, i8*) #1

declare dso_local i32 @send_command(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
